Init integrate pysyncit branch.
(Not tested yet)
- Integrate with pysyncit pkg.
- Remove syncit.cfg.
- Update LANSyncDaemon.
- Servers: Enter username and password.
- Create PySyncitDaemon.

--- a/lan_sync_controller/etc/settings.ini
+++ b/lan_sync_controller/etc/settings.ini
@@ -2,3 +2,5 @@
 debug = True
 logfile = /tmp/lan_sync_controller.log
 port = 17500
+# Window and Linux have a difference path format.
+syncdir = /home/<username>/sync_dir/
