--- a/lan_sync_controller/etc/settings.ini
+++ b/lan_sync_controller/etc/settings.ini
@@ -4,3 +4,5 @@ logfile = /tmp/lan_sync_controller.log
 port = 17500
 # Window and Linux have a difference path format.
 syncdir = /home/<username>/sync_dir/
+# Sync app: Dropbox, Google Drive,
+syncapp = dropbox
