--- a/lan_sync_controller/etc/settings.ini
+++ b/lan_sync_controller/etc/settings.ini
@@ -3,6 +3,6 @@ debug = True
 logfile = /tmp/lan_sync_controller.log
 port = 17500
 # Window and Linux have a difference path format.
-syncdir = /home/<username>/sync_dir/
+syncdir = /home/daidv/xyz
 # Sync app: Dropbox, Google Drive,
 syncapp = dropbox
