--- a/lan_sync_controller/etc/settings.ini
+++ b/lan_sync_controller/etc/settings.ini
@@ -1,8 +1,8 @@
 [default]
-debug = True
+debug = False
 logfile = /tmp/lan_sync_controller.log
-port = 17500
+port = 6969
 # Window and Linux have a difference path format.
-syncdir = /home/daidv/xyz/
+syncdir = /home/kiennt/test/
 # Sync app: Dropbox, Google Drive,
 syncapp = dropbox
