--- a/lan_sync_controller/etc/settings.ini
+++ b/lan_sync_controller/etc/settings.ini
@@ -1,8 +1,11 @@
 [default]
-debug = True
+debug = False
 logfile = /tmp/lan_sync_controller.log
-port = 17500
+port = 2609
 # Window and Linux have a difference path format.
 syncdir = /home/<username>/sync_dir/
 # Sync app: Dropbox, Google Drive,
 syncapp = dropbox
+# Ignore addresses and interfaces, skip these when scan.
+ignore_addresses = ['192.168.1.1']
+ignore_interfaces = ['ensp03', 'lo']
