--- a/lan_sync_controller/etc/settings.ini
+++ b/lan_sync_controller/etc/settings.ini
@@ -1,9 +1,10 @@
 [default]
 debug = False
+user = 'username'
 logfile = /tmp/lan_sync_controller.log
 port = 2609
 # Window and Linux have a difference path format.
-syncdir = /home/<username>/sync_dir/
+syncdir = /path/to/sync_dir/
 # Sync app: Dropbox, Google Drive,
 syncapp = dropbox
 # Ignore addresses and interfaces, skip these when scan.
