--- a/lan_sync_controller/etc/settings.ini
+++ b/lan_sync_controller/etc/settings.ini
@@ -1,10 +1,10 @@
 [default]
 debug = False
-user = 'username'
+user = kiennt
 logfile = /tmp/lan_sync_controller.log
 port = 2609
 # Window and Linux have a difference path format.
-syncdir = /path/to/sync_dir/
+syncdir = /home/kiennt/test/
 # Sync app: Dropbox, Google Drive,
 syncapp = dropbox
 # Ignore addresses and interfaces, skip these when scan.
