--- a/lan_sync_controller/etc/settings.ini
+++ b/lan_sync_controller/etc/settings.ini
@@ -8,5 +8,5 @@ syncdir = /home/kiennt/test/
 # Sync app: Dropbox, Google Drive,
 syncapp = dropbox
 # Ignore addresses and interfaces, skip these when scan.
-ignore_addresses = ['192.168.1.1']
+ignore_addresses = ['192.168.1.1'. '127.0.0.1', '0.0.0.0']
 ignore_interfaces = ['ensp03', 'lo']
