Try to use with Serf

--- a/lan_sync_controller/etc/settings.ini
+++ b/lan_sync_controller/etc/settings.ini
@@ -1,8 +1,8 @@
 [default]
 debug = False
 logfile = /tmp/lan_sync_controller.log
-port = 6969
+port = 9696
 # Window and Linux have a difference path format.
-syncdir = /home/kiennt/test/
+syncdir = /home/daidv/xyz/
 # Sync app: Dropbox, Google Drive,
 syncapp = dropbox
