--- a/lan_sync_controller/etc/settings.ini
+++ b/lan_sync_controller/etc/settings.ini
@@ -1,9 +1,12 @@
 [default]
 debug = False
 logfile = /tmp/lan_sync_controller.log
-ip = 192.168.122.59
+ip = 192.168.119.131
 port = 9696
 # Window and Linux have a difference path format.
-syncdir = /home/daidv/xyz/
+syncdir = /home/nqa/node31/
 # Sync app: Dropbox, Google Drive,
 syncapp = dropbox
+ignore_addresses = ['192.168.119.2'. '127.0.0.1', '0.0.0.0']
+ignore_interfaces = ['ensp03', 'lo']
+
