--- a/lan_sync_controller/etc/settings.ini
+++ b/lan_sync_controller/etc/settings.ini
@@ -1,8 +1,10 @@
 [default]
 debug = False
 user = kiennt
+password = password
 logfile = /tmp/lan_sync_controller.log
 port = 2609
+ip = 192.168.1.2
 # Window and Linux have a difference path format.
 syncdir = /home/kiennt/test/
 # Sync app: Dropbox, Google Drive,
