Fix missing call rpc

--- a/lan_sync_controller/etc/settings.ini
+++ b/lan_sync_controller/etc/settings.ini
@@ -1,14 +1,14 @@
 [default]
 debug = False
-user = kiennt
-password = password
+user = daidv
+password = 1
 logfile = /tmp/lan_sync_controller.log
 port = 2609
-ip = 192.168.1.2
+ip = 192.168.122.59
 # Window and Linux have a difference path format.
-syncdir = /home/kiennt/test/
+syncdir = /home/daidv/xyz/
 # Sync app: Dropbox, Google Drive,
 syncapp = dropbox
 # Ignore addresses and interfaces, skip these when scan.
-ignore_addresses = ['192.168.1.1'. '127.0.0.1', '0.0.0.0']
+ignore_addresses = ['192.168.122.1'. '127.0.0.1', '0.0.0.0']
 ignore_interfaces = ['ensp03', 'lo']
