Add swift config

--- a/lan_sync_controller/etc/settings.ini
+++ b/lan_sync_controller/etc/settings.ini
@@ -12,3 +12,9 @@ syncapp = dropbox
 # Ignore addresses and interfaces, skip these when scan.
 ignore_addresses = ['192.168.122.1'. '127.0.0.1', '0.0.0.0']
 ignore_interfaces = ['ensp03', 'lo']
+
+[swift]
+os_username=username
+os_password=password
+os_tenant_name=projectName
+os_auth_url=https://identityHost:portNumber/v2.0
