Add mysql config

--- a/lan_sync_controller/etc/settings.ini
+++ b/lan_sync_controller/etc/settings.ini
@@ -20,3 +20,10 @@ os_project_name=projectName
 os_auth_url=https://identityHost:portNumber/v2.0
 os_user_domain_name=default
 os_project_domain_name=default
+
+[mysql]
+host=192.168.1.26
+port=3306
+user=root
+password=password
+db_name=db_name
