--- a/lan_sync_controller/etc/settings.ini
+++ b/lan_sync_controller/etc/settings.ini
@@ -14,16 +14,16 @@ ignore_addresses = ['192.168.122.1'. '127.0.0.1', '0.0.0.0']
 ignore_interfaces = ['ensp03', 'lo']
 
 [swift]
-os_username=username
-os_password=password
+os_username=admin
+os_password=admin@123
 os_project_name=projectName
-os_auth_url=https://identityHost:portNumber/v2.0
+os_auth_url=http://25.35.205.208/identity/v3
 os_user_domain_name=default
-os_project_domain_name=default
+os_project_domain_name=admin
 
 [mysql]
-host=192.168.1.26
+host=25.35.205.208
 port=3306
 user=root
-password=password
-db_name=db_name
+password=admin@123
+db_name=lansync
