Change os_project_domain_name to default

--- a/lan_sync_controller/etc/settings.ini
+++ b/lan_sync_controller/etc/settings.ini
@@ -16,10 +16,10 @@ ignore_interfaces = ['ensp03', 'lo']
 [swift]
 os_username=admin
 os_password=admin@123
-os_project_name=projectName
+os_project_name=admin
 os_auth_url=http://25.35.205.208/identity/v3
 os_user_domain_name=default
-os_project_domain_name=admin
+os_project_domain_name=default
 
 [mysql]
 host=25.35.205.208
